# mdview

./: .gitignore  ARCHITECTURE.md  EMPIRICA_MAP.md  LICENSE  README.md  RENDERER-EXPANSION.md  SHOWCASE.md  generate_architecture.py  generate_empirica_map.py  generate_showcase.py  pyproject.toml  showcase.html
src/mdview/: __init__.py  boxrender.py  cli.py  config.py  diagrams.py  flowrender.py  providers.py  renderer.py  renderlib.py  routing.py  sequencerender.py  server.py  spec.py  specrender.py  tablerender.py  themes.py  wireframerender.py
tests/: test_renderers.py  test_spec.py  test_specrender.py  test_specrender_e2e.py  test_specrender_random.py
